Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita tenetur doloremque eveniet quis aperiam, sunt, rerum sapiente earum obcaecati non nostrum a doloribus quasi nam mollitia omnis cupiditate repudiandae. Ducimus.</p>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi in repellat mollitia enim maxime qui nam! Doloremque saepe consequuntur perferendis veritatis in temporibus, fugiat cumque.</p>
 </body>
 </html>
